--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,5 +2,6 @@
 <div id="retask">
 	<%= render "tasks/tasks" %>
 </div>
+<%= render "tasks/taskbuttons" %>
 
-<a href="#retask" id ="skip">reload me </a>  
+<!--<a href="#retask" id ="skip">reload me </a>  -->
