--- a/app/views/map/get.html.erb
+++ b/app/views/map/get.html.erb
@@ -79,15 +79,15 @@
 <% end %>
 <% if user_signed_in? %>
     <section id="task-section">  
-                <h2>Your task summary.</h2>
+               <!-- <h2>Your task summary.</h2>
                     <p>completed tasks/score:</p>  
                         <p>completed tasks/score:</p>
                 <p>complete new tasks >></p>
-                <p>your queued tasks:</p>
-                    <%= render "tasks/tasks" %>
-           <div class="sub-section">
+                <p>your queued tasks:</p>-->
+                        <%= render "tasks/tasks" %>
+                        <%= render "tasks/taskbuttons" %>
+            <div class="sub-section">
                 <div class="task-butt">
-                    <!--<%= link_to '<i class="icon-fire icon-white"></i> Get started >>'.html_safe,  tasks_path, :class => 'btn-large btn-success btn' %>-->
                     <hr></hr>
                 </div>    
             </div>  
