--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,7 +1,6 @@
 <%= stylesheet_link_tag "jquery-ui" %>
 <!-- note that jqueryui is also required by the calendar, but that's included in application.js -->
 <%= javascript_include_tag "timepicker" %>
-
 <p id="notice"><%= notice %></p>
 <ul id="myTab" class="nav nav-tabs">
     <li class="active note"><a href="#home" data-toggle="tab">YOUR TASK, SHOULD YOU CHOOSE TO ACCEPT:</a></li>
@@ -16,10 +15,15 @@
         <% if user_signed_in? %>
             <%= link_to '<i class="icon-time icon-white"></i> Skip this for now'.html_safe, tasks_path, :class => 'btn-large btn-inverse btn' %> 
             <%= link_to '<i class="icon-ok icon-white"></i> I did it!'.html_safe, completed_task_path(@random.id), :class => 'btn-large btn-success btn' -%>
-             <%= form_tag(reminder_path(@random.id), :action => :post) do%>  
-             <%= text_field_tag(:date, "Click to pick a reminder date", {:id => "pick_date", :dateFormat => "yy-mm-dd"}) %>
-             <%= submit_tag "Set my reminder"  %>   
-             <% end %>
+            <%= form_tag(reminder_path(@random.id), :action => :post) do%>  
+                <%= text_field_tag(:date, "Click to pick a reminder date", {:id => "pick_date", :dateFormat => "yy-mm-dd"}) %>
+                <br />
+                <label>Email</label><%= check_box_tag 'email' %>
+                <br />
+                <label>Text</label><%= check_box_tag 'text' %>
+                <br />
+                <%= submit_tag 'Set my reminder!', :class => 'btn-large btn-success btn' %>  
+            <% end %>
             <%= link_to '<i class="icon-pencil icon-white"></i> Create a new task'.html_safe, new_task_path, :class => 'btn-large btn-info btn' %>
         <% else %>
             <%= link_to '<i class="icon-time icon-white"></i> Skip for now'.html_safe, tasks_path, :class => 'btn-large btn-success btn' %>
