misc. cleanup of merge of delayed_job into dashboard

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
   <%= stylesheet_link_tag "application", :media => "all" %>
   <%= stylesheet_link_tag "mobile", :media => "all and (max-width: 800px)" %>
   <%= stylesheet_link_tag "bootstrap-responsive", :media => "all" %>
+  <%= stylesheet_link_tag "jquery-ui" %>
 </head>
 <body data-offset="50" data-target=".subnav" data-spy="scroll" data-twttr-rendered="true">
   <% if user_signed_in? %>
