--- a/app/views/tasks/_taskbuttons.html.erb
+++ b/app/views/tasks/_taskbuttons.html.erb
@@ -3,6 +3,7 @@
     <% if user_signed_in? %>
         <%= link_to '<i class="icon-ok icon-white"></i> I did it!'.html_safe, { :controller => 'completed_tasks', :action => 'completed' }, :class => 'btn-large btn-success btn' -%> 
         <%= link_to '<i class="icon-pencil icon-white"></i> Create a new task'.html_safe, new_task_path, :class => 'btn-large btn-info btn' %>
+        <%# Don't change stuff in any of the ruby _tags or bad things happen %>
         <%= form_tag(reminder_path(@random.id), :action => :post) do%>  
           <%= text_field_tag(:date, "Click to pick a reminder date", {:id => "pick_date", :dateFormat => "yy-mm-dd"}) %>
           <br />
