--- a/app/views/map/get.html.erb
+++ b/app/views/map/get.html.erb
@@ -1,20 +1,5 @@
 <% if user_signed_in? %>
-        <header class="jumbotron subhead" id="overview">
-            <h1>Hello, welcome back.</h1>
-
-            <p class="lead">Your prepared.ly dashboard awaits!</p>
-           <!-- <div class="task-butt"><%= link_to ' Create an account <i class="icon-thumbs-up icon-white"></i>'.html_safe,  about_path, :class => 'btn-large btn-success btn' %>
-                <hr></hr>
-            </div>-->
-            <div class="subnav">
-              <ul class="nav nav-pills">
-                <li><a href="#map-section">my current location risks</a></li>
-                <li><a href="#task-section">my tasks</a></li>
-                <li><a href="#notify-section">my notification settings</a></li>
-                <li><a href="#account-section">my account</a></li>
-              </ul>
-            </div>
-          </header>
+    <%= render "dashboard" %>
 <% else %>
         <header class="jumbotron subhead" id="overview">
             <h1>Welcome, let's get started. </h1>
@@ -36,28 +21,7 @@
               </ul>
             </div>
           </header>
-<% end %>
-<% if user_signed_in? %>
-<div class="container-fluid">  
-    <section id="map-section">       
-        <%= form_tag("/map", :method=> "mappartial") do %>
-            <h2>Current conditions for your address.</h2>
-            <p> For now this is just an image....</p>
-            <img src="assets/map.jpg">
-            <div class="sub-section">
-                <p>Search another address</p>
-                <div class="controls">
-                    <div class="task-butt input-append map-butt">
-                        <%= text_field_tag(:q, nil,  :value => '123 Main St. Austin, TX', :class => 'address form-inline input-xx-large') %><%= submit_tag("Load my map", :class => 'btn-large btn-success btn') %>
-                        <hr></hr>    
-                        <!--<br><span class="help-inline note"> Include city and state, only available for the state of Texas. 
-                            </span>-->
-                    </div>
-                </div>
-            <% end %>
-        </div>
-    </section> 
-<%else %>  
+
 <div class="container-fluid">  
     <section id="map-section">       
         <%= form_tag("/map", :method=> "mappartial") do %>
@@ -78,36 +42,6 @@
             <% end %>
         </div>
     </section> 
-<% end %>
-<% if user_signed_in? %>
-    <section id="task-section">  
-        <h2> what have you done lately? </h2>
-        <p> enter it here _______________ </p>
-        <p> what have other people been doing? <br>
-            <ul> 
-                <li>john d. cleaned his gutters!</li>
-                <li>sarah h. filled out a survey. </li>
-            </ul>
-        </p>    
-               
-                        <%= render "tasks/tasks" %>
-                        <%= render "tasks/taskbuttons" %>
-                        <p> add to my list</p>
-                        <p> discuss/annotate this task </p>
-                        <p> schedule for later </p>
-                        <p> share [dropdown] text, tweet, email </p>
-                    <h2>Your task summary. (three columns)</h2>
-                    <p>completed tasks/score:</p>  
-                    <p>completed tasks/score:</p>
-                <p>complete new tasks >></p>
-                <p>your queued tasks:</p>
-            <div class="sub-section">
-                <div class="task-butt">
-                    <hr></hr>
-                </div>    
-            </div>  
-    </section>
-<% else %>   
     <section id="task-section">  
             <h2>2. Stay prepared with the abilty to accept, share, and create tasks for you and your neighborhood via text, email or Twitter.</h2>
             <p>Use this tool to accept or decline tasks, as well as get some background on why they are important. Think something's important that you don't see? You'll have the ability to add your own, and share it with your neighbors.</p>
@@ -118,20 +52,6 @@
                 </div>
             </div>    
     </section>
-<% end %>     
-<% if user_signed_in? %>
-    <section id="notify-section"> 
-                <h2>Your current notifications.</h2> 
-                <p>What's happening now?</p>
-                <p>Looks like you're on top of things! Excellent work.</p>
-                <p> Adjust settings </p>
-                <div class="sub-section">
-                    <div class="task-butt"><%= link_to '<i class="icon-fire icon-white"></i> Contact the Fire Department >>'.html_safe,  contacts_path, :class => 'btn-large btn-success btn' %>
-                        <hr></hr>
-                    </div>
-                </div>    
-    </section>   
-<% else %>
     <section id="notify-section"> 
                  <img src="assets/notify.png">   
                 <h2>3. Set up notifications to stay on top of things, and up to date with weather conditions.</h2> 
@@ -151,27 +71,6 @@
                     </div>
                 </div>    
     </section>  
-<% end %>  
-<% if user_signed_in? %>  
-    <section id="account-section"> 
-                <h2>Your account.</h2>
-                <p>Current settings:</p>
-                <ul>
-                    <li>name: <%= @user.first_name %> <%= @user.last_name %></li>
-                    <li>email: <%= @user.email %></li>
-                    <li>phone: <%= @user.phone %></li>
-                    <li>saved address: <%= @user.address %></li>
-                    <li>date account created: <%= @user.created_at %></li>
-                </ul>
-                <p>Also, feel free to leave us comments and questions with the "feedback" tab on the left side of the page, or send us an email at <a href="mailto:austin@codeforamerica.org">austin@codeforamerica.org</a> at any time.</p>
-               <div class="sub-section">
-                    <div class="task-butt"> 
-                        <!--<a href="../users/sign_up" class="btn btn-large btn-success"> Create an account </a>-->
-                        <hr></hr>
-                    </div>
-                </div>         
-    </section>  
-<% else %>
     <section id="account-section"> 
                 <h2>4. Create an account, keep track of your progress</h2>
                 <div class="video">
@@ -185,8 +84,9 @@
                         </div>
                     </div>     
     </section>  
-<% end %>     
 </div>
+<% end %>
+
 <!-- <section id="task-section">     
         <h2>Last Summer, over 1300 homes were destroyed in Bastrop County due to wildfire.</h2>
         <p>
