Update fetching of XML feed, render into view

--- a/app/views/map/post.html.erb
+++ b/app/views/map/post.html.erb
@@ -20,88 +20,103 @@
     </div>
 <!-- div that will display the map that is set using below javascript -->
     <div id="map"></div>
-            <div class="detail-col">
-                <table>
-                    <thead>
-                        <td><h4><%= @address.address %></h4>
-                        <hr></hr></td>
-                        
-                    </thead>
-                    <tr>
-                        <td class="risk risk-title">Risk of this location:</td>
-                    </tr>
-                    <tr>
-                        <% if @risk_level %>    
-                          <td class="risk risk-<%= @risk_level %>"><%= @risk_text %>
-                          </td>
-                        <% else %>
-                          <td class="risk">No risk data is available at this location</td>
-                        <% end %>
-                    </tr>
-                    <tr>
-                        <td class="note">
-                            <a href="#" id="map-pop" data-content="<strong> About Risk Level </strong><br>The risk level is supplied by the Texas Forest Service Wildfire Risk Assessment 
-                            Portal (TxWRAP), which uses the Fire Intensity Scale (FIS). 
-                            The FIS quantifies potential fire intensity based on high to extreme weather 
-                            conditions, fuels, and topography." class="note">About Risk Level</a>
-                            <!--<a href="#" class="tooltip"> About Risk Level <span> 
-                            <img class="callout" src="/assets/callout.png" /> 
-                            <strong> About Risk Level </strong>
-                            <br /> 
-                            The risk level is supplied by the Texas Forest Service Wildfire Risk Assessment 
-                            Portal (TxWRAP), which uses the Fire Intensity Scale (FIS). 
-                            The FIS quantifies potential fire intensity based on high to extreme weather 
-                            conditions, fuels, and topography. </span> </a>  
-                            <span> 
-                            <img class="callout" src="/assets/callout.png" /> -->
-                            &#124;
-                        <a href="http://www.texaswildfirerisk.com/Map" target="blank">go to TxWRAP site</a>
-                        </td> 
-                    </tr>        
-                   <!-- <tr>
-                        <td colspan="2" class="note">See more about your risk level, here.</td>
-                    </tr>-->
-                    <tr>
-                        <td><span class="condition-type">Wind: </span><span class="condition"><%= @wind_conditions %></span></td>
-                    </tr>
-                    <tr>
-                        <td><span class="condition-type">Humidity:</span><span class="condition"> <%= @relative_humidity %></span></td>
-                    </tr>
-                    <tr>
-                        <td><span class="condition-type">Inside of a Burn Ban: </span><span "class="condition"> <%= @inside_burnban %></span></td>
-                    </tr>
-                    <tr>
-                        <td><span class="condition-type">NWS Weather Warning: </span><span "class="condition"> <%= @inside_nws %></span></td>
-                    </tr>
-                    <tr id="map-controls">
-                        <td><label for="firestations" class="condition-type">Show Fire Stations</label>&nbsp<input type="checkbox" id="firestations" name="firestations" checked="checked" /></td>
-                        </tr>
-                        <tr>
-                        <td class="note">
-                            <a href="#" id="stations-pop" data-content="<strong>Please note</strong> that fire stations are shown for information purposes to better understand your local environment. Geographic proximity to a fire station, or many stations, does <b>not</b> mean you are safer." class="note">Important note about fire stations</a></td>
-
-                    </tr>       
-                </table>
-            </div>
-            <% unless user_signed_in? %>
-                <div class="detail-col">
-                  <h4>
-                      Join prepared.ly &mdash; it's free!
-                  </h4>
-                    <a href="users/sign_up"><button class="btn btn-info btn-large"> <i class="icon-user icon-white"></i> sign up now </button></a>
-                 </div>   
-             <% end %>
-             <div class="detail-col">
-                  <h4>
-                      Want to start getting more prepared <em>right now</em>?
-                  </h4>
-                    <a href="/tasks"><button class="btn btn-success btn-large"> <i class="icon-fire icon-white"></i> Get started! </button></a>
-            </div>   
-
-
-
-      </div>
-    </div>  
+   <div id="warnings"  style="display: none;">
+          <h4>National Weather Service Warnings In Your Area</h4>
+          <% @warnings.each do |w| -%>
+            <%= w.css("title").text -%>
+            <%= "Summary: " + w.css("summary").text -%>
+            <%= "Urgency: " + w.css("urgency").text -%>
+            <%= "Severity: " + w.css("severity").text -%>
+            <%= "Certainty: " + w.css("certainty").text -%>
+            <%= "Affected counties: " + w.css("areaDesc").text -%>
+            <br />
+            <hr />
+          <% end %>
+        </div>
+    <div class="detail-col">
+        <table>
+            <thead>
+                <td><h4><%= @address.address %></h4>
+                <hr></hr></td>
+                
+            </thead>
+            <tr>
+                <td class="risk risk-title">Risk of this location:</td>
+            </tr>
+            <tr>
+                <% if @risk_level %>    
+                  <td class="risk risk-<%= @risk_level %>"><%= @risk_text %>
+                  </td>
+                <% else %>
+                  <td class="risk">No risk data is available at this location</td>
+                <% end %>
+            </tr>
+            <tr>
+                <td class="note">
+                    <a href="#" id="map-pop" data-content="<strong> About Risk Level </strong><br>The risk level is supplied by the Texas Forest Service Wildfire Risk Assessment 
+                    Portal (TxWRAP), which uses the Fire Intensity Scale (FIS). 
+                    The FIS quantifies potential fire intensity based on high to extreme weather 
+                    conditions, fuels, and topography." class="note">About Risk Level</a>
+                    <!--<a href="#" class="tooltip"> About Risk Level <span> 
+                    <img class="callout" src="/assets/callout.png" /> 
+                    <strong> About Risk Level </strong>
+                    <br /> 
+                    The risk level is supplied by the Texas Forest Service Wildfire Risk Assessment 
+                    Portal (TxWRAP), which uses the Fire Intensity Scale (FIS). 
+                    The FIS quantifies potential fire intensity based on high to extreme weather 
+                    conditions, fuels, and topography. </span> </a>  
+                    <span> 
+                    <img class="callout" src="/assets/callout.png" /> -->
+                    &#124;
+                <a href="http://www.texaswildfirerisk.com/Map" target="blank">go to TxWRAP site</a>
+                </td> 
+            </tr>        
+           <!-- <tr>
+                <td colspan="2" class="note">See more about your risk level, here.</td>
+            </tr>-->
+            <tr>
+                <td><span class="condition-type">Wind: </span><span class="condition"><%= @wind_conditions %></span></td>
+            </tr>
+            <tr>
+                <td><span class="condition-type">Humidity:</span><span class="condition"> <%= @relative_humidity %></span></td>
+            </tr>
+            <tr>
+                <td><span class="condition-type">Inside of a Burn Ban: </span><span "class="condition"> <%= @inside_burnban %></span></td>
+            </tr>
+            <tr>
+                <td><span class="condition-type">NWS Weather Warning: </span><span "class="condition"> <%= @inside_nws %></span></td>
+            </tr>
+            <tr>
+              <td class="note" id="warnings-trigger">Read current warnings</td>
+            </tr>
+            <tr>
+              <td class="note" id="remove-warnings">Go back to map</td>
+            </tr>
+            <tr id="map-controls">
+                <td><label for="firestations" class="condition-type">Show Fire Stations</label>&nbsp<input type="checkbox" id="firestations" name="firestations" checked="checked" /></td>
+            </tr>
+            <tr>
+            <td class="note">
+                <a href="#" id="stations-pop" data-content="<strong>Please note</strong> that fire stations are shown for information purposes to better understand your local environment. Geographic proximity to a fire station, or many stations, does <b>not</b> mean you are safer." class="note">Important note about fire stations</a></td>
+            </tr>       
+        </table>
+    </div>
+    <% unless user_signed_in? %>
+        <div class="detail-col">
+          <h4>
+              Join prepared.ly &mdash; it's free!
+          </h4>
+            <a href="users/sign_up"><button class="btn btn-info btn-large"> <i class="icon-user icon-white"></i> sign up now </button></a>
+         </div>   
+     <% end %>
+    <div class="detail-col">
+          <h4>
+              Want to start getting more prepared <em>right now</em>?
+          </h4>
+            <a href="/tasks"><button class="btn btn-success btn-large"> <i class="icon-fire icon-white"></i> Get started! </button></a>
+    </div>   
+  </div>
+</div>  
 <!--
   </div>-->
   <% else %>
@@ -118,15 +133,24 @@
        e.preventDefault();
        //$('#map-pop').popover('show');
     });
-   });
-  $(document).ready(function() {
+
     $("#stations-pop")
      .popover({/*trigger: 'manual'*/})
      .click(function(e){
        e.preventDefault();
        //$('#stations-pop').popover('show');
     });
-   });
+
+    $("#warnings-trigger").click(function(e){
+      $("#warnings").show();
+      $("#map").hide();
+    });
+
+    $("#remove-warnings").click(function(e){
+     $("#warnings").hide();
+      $("#map").show();
+    });
+  });
   </script>
   <script src="http://code.leafletjs.com/leaflet-0.3.1/leaflet.js"></script>
 <!--  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
