--- a/app/views/tasks/_taskbuttons.html.erb
+++ b/app/views/tasks/_taskbuttons.html.erb
@@ -3,16 +3,28 @@
     <% if user_signed_in? %>
         <%= link_to '<i class="icon-ok icon-white"></i> I did it!'.html_safe, { :controller => 'completed_tasks', :action => 'completed' }, :class => 'btn-large btn-success btn' -%> 
         <%= link_to '<i class="icon-pencil icon-white"></i> Create a new task'.html_safe, new_task_path, :class => 'btn-large btn-info btn' %>
-        <%= form_tag(reminder_path(@random.id), :action => :post) do%>  
-          <%= text_field_tag(:date, "Click to pick a reminder date", {:id => "pick_date", :dateFormat => "yy-mm-dd"}) %>
-          <br />
-          <label>Email</label><%= check_box_tag 'email' %>
-          <br />
-          <label>Text</label><%= check_box_tag 'text' %>
-          <br />
-          <%= submit_tag 'Set my reminder!', :class => 'btn-large btn-success btn' %>  
-      <% end %>
+        <a class="btn-large btn-info btn" data-toggle="modal" href="#schedule">Schedule</a>
     <% else %>
         <a href="users/sign_up"><button class="btn-large btn-info btn"><i class="icon-user icon-white"></i> Sign up to track my progress, set reminders, and create tasks!</button></a>
     <% end %> 
 </div> 
+
+       <div id="schedule" class="modal hide fade">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h3>Schedule a reminder</h3>
+            </div>
+            <div class="modal-body">
+                 <%= form_tag(reminder_path(@random.id), :action => :post) do%>  
+                 <%= text_field_tag(:date, "Click to pick a reminder date", {:id => "pick_date", :dateFormat => "yy-mm-dd"}) %>
+            <label>Email</label><%= check_box_tag 'email' %>
+            <br />
+            <label>Text</label><%= check_box_tag 'text' %>
+            <br />
+            </div>
+            <div class="modal-footer">
+                       <%= submit_tag 'Set my reminder!', :class => 'btn-large btn-success btn' %>  
+      <% end %>
+              <a href="#" class="btn" data-dismiss="modal" >Close</a>
+            </div>
+          </div>
