--- a/app/views/layouts/_usernavigation-side.html.erb
+++ b/app/views/layouts/_usernavigation-side.html.erb
@@ -5,9 +5,9 @@
             <p><%= @user.address %></p>
         </div>
           <ul class="nav nav-tabs">
-                <li><a href="#map-section">location and current conditions</a></li>
-                <li><a href="#task-section">your preparedness</a></li>
-                <li><a href="#notify-section">notification preferences</a></li>
-                <li><a href="#account-section">account settings</a></li>
+                <li><a href="#map-section" data-toggle="tab">location and current conditions</a></li>
+                <li><a href="#task-section" data-toggle="tab">your preparedness</a></li>
+                <li><a href="#notify-section" data-toggle="tab">notification preferences</a></li>
+                <li><a href="#account-section" data-toggle="tab">account settings</a></li>
           </ul>
     </div> 
