--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,19 +11,56 @@
   <%= stylesheet_link_tag "bootstrap-responsive", :media => "all" %>
   <%= stylesheet_link_tag "jquery-ui" %>
 </head>
-<body data-offset="100" data-target=".subnav" data-spy="scroll" data-twttr-rendered="true">
-       <% if user_signed_in? %>
-             <%= render "layouts/usernavigation" %>
-       <% else %>
-             <%= render "layouts/navigation" %>
-       <% end %>
+<body data-offset="50" data-target=".subnav" data-spy="scroll" data-twttr-rendered="true">
+<!-- navbar content -->
+  <div class="navbar navbar-fixed-top">
+    <div class="navbar-inner">
+      <div class="container-fluid">
+        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </a>
+        <% if user_signed_in? %> <!--show logo in nav for signed in users -->
+            <a class="brand" href="#"><img src="/assets/preparedly-nav-blue.png" width="119px" height="20px"></a>
+        <% end %>    
+          <div class="nav-collapse">
+                <ul class="nav navbar-items pull-right">
+                  <li class=""><a href="/"> home</a></li>
+                  <li><%= link_to "learn", resources_path %></li> 
+                  <li><%= link_to "about", about_path %></li>
+                  <li class="dropdown">
+                      <a class="dropdown-toggle" data-toggle="dropdown" href="#">account <b class="caret"></b></a>
+                      <ul class="dropdown-menu">
+                  <li><%= render 'devise/menu/registration_items' %></li>
+                  <li><%= render 'devise/menu/login_items' %></li>
+                      </ul>
+                    </li>
+                </ul>
+          </div><!--/.nav-collapse -->
+      </div>
+    </div>
+  </div>
+
+<!-- login modal content -->
+<div id="signin" class="modal hide fade">
+  <div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal">&times;</button>
+      <h3>Modal Heading</h3>
+  </div>
+  <div class="modal-body">
+      <%= render :partial => "devise/sessions/new" %>
+      <!--  need to render :partial => "devise/links" here but it isn't working correctly %> -->
+  </div>  
+</div>
+<!-- end login  modal content -->
 <div class="container" id="main-wrap">      
-      <div id="beta">
-      </div>   
-      <% if user_signed_in? %>
-        <div class="container-fluid">
-            <%= yield %>
-        </div>
+  <div id="beta">
+  </div>   
+  <% if user_signed_in? %>
+      <div class="container-fluid">
+      <%= yield %>
+      </div>
       <% else %>
         <div id="main">
             <div id="logo-wrapper">
