--- a/app/views/tasks/_taskbuttons.html.erb
+++ b/app/views/tasks/_taskbuttons.html.erb
@@ -1,15 +1,17 @@
 <div class="task-butt">
-    <%= link_to '<i class="icon-time icon-white"></i> Skip for now'.html_safe, tasks_path, :class => 'btn-large btn-inverse btn', :id => 'skip' %>
+    
     <% if user_signed_in? %>
-        <%= link_to '<i class="icon-ok icon-white"></i> I did it!'.html_safe, { :controller => 'completed_tasks', :action => 'completed' }, :class => 'btn-large btn-success btn' -%> 
+        
         <%= link_to '<i class="icon-pencil icon-white"></i> Create a new task'.html_safe, new_task_path, :class => 'btn-large btn-info btn' %>
         <a class="btn-large btn-info btn" data-toggle="modal" href="#schedule">Schedule</a>
     <% else %>
         <a href="users/sign_up"><button class="btn-large btn-info btn"><i class="icon-user icon-white"></i> Sign up to track my progress, set reminders, and create tasks!</button></a>
     <% end %> 
+        <%= link_to '<i class="icon-time icon-white"></i> Skip for now'.html_safe, tasks_path, :class => 'btn-large btn-inverse btn', :id => 'skip' %>
+        <%= link_to '<i class="icon-ok icon-white"></i> I did it!' .html_safe, "#done", :class => 'btn-large btn-success btn', :id => 'skip', :data => {:toggle => "modal"}%>
 </div> 
-
-       <div id="schedule" class="modal hide fade">
+<!-- //////////////////// schedule modal //////////////// -->
+<div id="schedule" class="modal hide fade">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal">&times;</button>
               <h3>Schedule a reminder</h3>
@@ -27,4 +29,26 @@
       <% end %>
               <a href="#" class="btn" data-dismiss="modal" >Close</a>
             </div>
-          </div>
+</div>
+<!-- //////////////////// done modal //////////////// -->
+<div id="done" class="modal hide fade">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h3>You did it!</h3>
+            </div>
+            <div class="modal-body">
+              <p> One small step for your house, one giant step for neighborhoodkind. . .    </p> 
+              <p> How'd it go? <a href "">skip this</a></p>
+              <ul>
+                <li> good</li>
+                <li> ok </li>
+                <li> terrible </li>
+              </ul>
+              <label>Any thing more to add?  </label>
+              <input>
+            </div>
+            <div class="modal-footer">
+              <%= link_to '<i class="icon-ok icon-white"></i> Give me another!'.html_safe, { :controller => 'completed_tasks', :action => 'completed' }, :class => 'btn-large btn-success btn' -%> 
+              <a href="#" class="btn" data-dismiss="modal" >Close</a>
+            </div>
+</div>
